<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/bienvenida" />
    <EditText android:id="@+id/apodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nick" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:columnCount="2"
        android:rowCount="2"
        android:gravity="center">
        <Button android:id="@+id/inicio"
            android:layout_gravity="fill_horizontal"
            android:text="@string/inicio"
            android:onClick="inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/info"
            android:layout_gravity="fill_horizontal"
            android:text="@string/info"
            android:onClick="info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/seleccion"
            android:layout_gravity="fill_horizontal"
            android:text="@string/seleccion"
            android:onClick="seleccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/acuerdo"
            android:layout_gravity="fill_horizontal"
            android:text="@string/acuerdo"
            android:onClick="acuerdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </GridLayout>
</LinearLayout>